--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,5 +24,5 @@ steps:
 #    testRunner: NUnit
 #    searchFolder: '$(Common.TestResultsDirectory)'
 
-- powershell: Publish-Module -Name "devtools" -NuGetApiKey $(NugetAPIKey)
+- powershell: Publish-Module -Path "./" -NuGetApiKey $(NugetAPIKey)
   displayName: 'Publish PowerShell Module'
