--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,6 +24,6 @@ steps:
 #    testRunner: NUnit
 #    searchFolder: '$(Common.TestResultsDirectory)'
 
-- powershell: Import-Module -Name "$(Build.Repository.LocalPath)\mjtools"
+- powershell: Import-Module -Name "$(Build.Repository.LocalPath)\mjtools.psd1"
 - powershell: Publish-Module -Name "mjtools" -NuGetApiKey $(NugetAPIKey)
   displayName: 'Publish PowerShell Module'
