--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,6 +24,5 @@ steps:
 #    testRunner: NUnit
 #    searchFolder: '$(Common.TestResultsDirectory)'
 
-- powershell: Import-Module -Name "$(Build.Repository.LocalPath)\mjtools.psd1"
-- powershell: Publish-Module -Name "mjtools" -NuGetApiKey $(NugetAPIKey)
+- powershell: Publish-Module -Path "$(Build.Repository.LocalPath)/modules/devtoolbox" -NuGetApiKey $(NugetAPIKey)
   displayName: 'Publish PowerShell Module'
