--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,5 +24,5 @@ steps:
 #    testRunner: NUnit
 #    searchFolder: '$(Common.TestResultsDirectory)'
 
-- powershell: Publish-Module -Path "$(Build.Repository.LocalPath)/modules/devtoolbox" -NuGetApiKey $(NugetAPIKey)
+- powershell: Publish-Module -Path "$(Build.Repository.LocalPath)/src/devtoolbox" -NuGetApiKey $(NugetAPIKey)
   displayName: 'Publish PowerShell Module'
