--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -13,7 +13,9 @@ jobs:
     - uses: actions/stale@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        stale-issue-message: 'Issue has not had any activity for 60 days'
-        stale-pr-message: 'Pull Request has not had any activity for 60 days'
+        stale-issue-message: 'Issue has not had any activity for 30 days'
+        stale-pr-message: 'Pull Request has not had any activity for 30 days'
         stale-issue-label: 'stale'
         stale-pr-label: 'stale'
+        days-before-stale: 30
+        days-before-close: 60
