--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Build module
         shell: pwsh
         run: |
-          . "./_build/build.ps1"
+          ./_build/build.ps1
           
       - name: Deploy to PowerShell Gallery
         env:
