--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,6 +28,8 @@ jobs:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     # needs: test
     runs-on: ubuntu-latest
+    env:
+      PS_GALLERY_API_KEY: ${{ secrets.PS_GALLERY_API_KEY }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -38,8 +40,6 @@ jobs:
           ./_build/build.ps1
           
       - name: Deploy to PowerShell Gallery
-        env:
-          PS_GALLERY_API_KEY: ${{ secrets.PS_GALLERY_API_KEY }}
         shell: pwsh
         run: |
-          Publish-Module -Path ./dist -NuGetApiKey $env:PS_GALLERY_API_KEY
+          Publish-Module -Path "$(env:GITHUB_WORKSPACE)/dist" -NuGetApiKey $env:PS_GALLERY_API_KEY
