Working on CI/CD process

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -37,9 +37,9 @@ jobs:
       - name: Build module
         shell: pwsh
         run: |
-          ./_build/build.ps1
+          . ./_build/build.ps1
           
       - name: Deploy to PowerShell Gallery
         shell: pwsh
         run: |
-          Publish-Module -Path $env:GITHUB_WORKSPACE/dist -NuGetApiKey $env:PS_GALLERY_API_KEY
+          Publish-Module -Path /dist -NuGetApiKey $env:PS_GALLERY_API_KEY
