Working on CI/CD process

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -39,6 +39,11 @@ jobs:
         run: |
           . ./_build/build.ps1
           
+      - name: Did it build
+        shell: pwsh
+        run: |
+          ls
+          
       - name: Deploy to PowerShell Gallery
         shell: pwsh
         run: |
