--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,8 +28,6 @@ jobs:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     # needs: test
     runs-on: ubuntu-latest
-    env:
-      PS_GALLERY_API_KEY: ${{ secrets.PS_GALLERY_API_KEY }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -37,7 +35,12 @@ jobs:
       - name: Build & publish module
         shell: pwsh
         run: |
-          . ./_build/build.ps1 `
-          ls `
-          Publish-Module -Path /dist -NuGetApiKey $env:PS_GALLERY_API_KEY
-          
+          . ./_build/build.ps1
+        
+      - name: Deploy to PS Gallery
+        uses: natescherer/publish-powershell-action@v1
+        with:
+          token: ${{ secrets.PS_GALLERY_API_KEY }}
+          target: gallery
+          path: dist
+        
