--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -34,8 +34,7 @@ jobs:
 
       - name: Build & publish module
         shell: pwsh
-        run: |
-          . ./_build/build.ps1
+        run: ./_build/build.ps1
         
       - name: Deploy to PS Gallery
         uses: natescherer/publish-powershell-action@v1
